- Connect to Mysql and sink data in the player table - Create a MySQL CDC source and print changes - Create Util classes such as ConfigReader, DataBaseHelper, - IngestionTimeWatermarkStrategy, and PlayerMapper - Downgrade flink version to 1.20.1 - Update java version